experiments/73/1953e2cb13c7c2438a14a927b3af91317b72f2/error
MESSAGE: Execution of "sudo -u lctt-runner ./build_llvm_project_stage1.sh" failed

STDOUT:
[375/2640] Copying clang's ppc_wrappers/mmintrin.h...
[376/2640] Copying clang's ppc_wrappers/nmmintrin.h...
[377/2640] Copying clang's ppc_wrappers/tmmintrin.h...
[378/2640] Copying clang's ppc_wrappers/smmintrin.h...
[379/2640] Copying clang's ppc_wrappers/x86gprintrin.h...
[380/2640] Copying clang's ppc_wrappers/x86intrin.h...
[381/2640] Copying clang's prfchiintrin.h...
[382/2640] Copying clang's ppc_wrappers/pmmintrin.h...
[383/2640] Copying clang's prfchwintrin.h...
[384/2640] Copying clang's ptwriteintrin.h...
[385/2640] Copying clang's raointintrin.h...
[386/2640] Copying clang's rdpruintrin.h...
[387/2640] Copying clang's ppc_wrappers/xmmintrin.h...
[388/2640] Copying clang's rdseedintrin.h...
[389/2640] Copying clang's rtmintrin.h...
[390/2640] Copying clang's riscv_ntlh.h...
[391/2640] Copying clang's serializeintrin.h...
[392/2640] Copying clang's sha512intrin.h...
[393/2640] Copying clang's s390intrin.h...
[394/2640] Copying clang's shaintrin.h...
[395/2640] Copying clang's sifive_vector.h...
[396/2640] Copying clang's sm3intrin.h...
[397/2640] Copying clang's sm4intrin.h...
[398/2640] Copying clang's tsxldtrkintrin.h...
[399/2640] Copying clang's smmintrin.h...
[400/2640] Copying clang's tbmintrin.h...
[401/2640] Copying clang's tmmintrin.h...
[402/2640] Copying clang's uintrintrin.h...
[403/2640] Copying clang's usermsrintrin.h...
[404/2640] Copying clang's sgxintrin.h...
[405/2640] Copying clang's vaesintrin.h...
[406/2640] Copying clang's vecintrin.h...
[407/2640] Copying clang's velintrin.h...
[408/2640] Copying clang's velintrin_approx.h...
[409/2640] Copying clang's velintrin_gen.h...
[410/2640] Copying clang's vpclmulqdqintrin.h...
[411/2640] Copying clang's waitpkgintrin.h...
[412/2640] Copying clang's wasm_simd128.h...
[413/2640] Copying clang's wbnoinvdintrin.h...
[414/2640] Copying clang's wmmintrin.h...
[415/2640] Copying clang's x86gprintrin.h...
[416/2640] Copying clang's x86intrin.h...
[417/2640] Copying clang's xmmintrin.h...
[418/2640] Copying clang's xsaveoptintrin.h...
[419/2640] Copying clang's xsavecintrin.h...
[420/2640] Copying clang's xsaveintrin.h...
[421/2640] Copying clang's xopintrin.h...
[422/2640] Copying clang's xsavesintrin.h...
[423/2640] Copying clang's xtestintrin.h...
[424/2640] Building CXX object tools/clang/lib/Support/CMakeFiles/obj.clangSupport.dir/RISCVVIntrinsicUtils.cpp.o
[425/2640] Copying clang's __stdarg___gnuc_va_list.h...
[426/2640] Copying clang's __stdarg___va_copy.h...
[427/2640] Copying clang's __stdarg_va_arg.h...
[428/2640] Copying clang's __stdarg_va_copy.h...
[429/2640] Copying clang's __stdarg_va_list.h...
[430/2640] Copying clang's __stddef_max_align_t.h...
[431/2640] Copying clang's __stddef_null.h...
[432/2640] Copying clang's __stddef_nullptr_t.h...
[433/2640] Copying clang's __stddef_offsetof.h...
[434/2640] Copying clang's __stddef_ptrdiff_t.h...
[435/2640] Copying clang's __stddef_rsize_t.h...
[436/2640] Copying clang's __stddef_unreachable.h...
[437/2640] Copying clang's __stddef_wchar_t.h...
[438/2640] Copying clang's __stddef_wint_t.h...
[439/2640] Copying clang's __stddef_size_t.h...
[440/2640] Copying clang's float.h...
[441/2640] Copying clang's hlsl/hlsl_basic_types.h...
[442/2640] Copying clang's inttypes.h...
[443/2640] Copying clang's hlsl/hlsl_intrinsics.h...
[444/2640] Copying clang's iso646.h...
[445/2640] Copying clang's limits.h...
[446/2640] Copying clang's llvm_libc_wrappers/ctype.h...
[447/2640] Copying clang's llvm_libc_wrappers/inttypes.h...
[448/2640] Copying clang's llvm_libc_wrappers/stdlib.h...
[449/2640] Copying clang's llvm_libc_wrappers/string.h...
[450/2640] Copying clang's llvm_libc_wrappers/stdio.h...
[451/2640] Copying clang's llvm_libc_wrappers/time.h...
[452/2640] Copying clang's module.modulemap...
[453/2640] Copying clang's opencl-c-base.h...
[454/2640] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[455/2640] Copying clang's openmp_wrappers/cmath...
[456/2640] Copying clang's stdarg.h...
[457/2640] Copying clang's openmp_wrappers/complex...
[458/2640] Copying clang's openmp_wrappers/complex.h...
[459/2640] Copying clang's openmp_wrappers/new...
[460/2640] Copying clang's openmp_wrappers/complex_cmath.h...
[461/2640] Copying clang's stdatomic.h...
[462/2640] Copying clang's stdalign.h...
[463/2640] Copying clang's stdbool.h...
[464/2640] Copying clang's stdckdint.h...
[465/2640] Copying clang's stdint.h...
[466/2640] Copying clang's tgmath.h...
[467/2640] Copying clang's vadefs.h...
[468/2640] Copying clang's varargs.h...
[469/2640] Copying clang's stddef.h...
[470/2640] Copying clang's stdnoreturn.h...
[471/2640] Copying clang's unwind.h...
[472/2640] Building CXX object lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o
FAILED: lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++ -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -I/tmp/llvm-project-build-stage1/lib/Support -I/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support -I/tmp/llvm-project-build-stage1/include -I/var/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fno-semantic-interposition -fvisibility-inlines-hidden -Werror=date-time -fno-lifetime-dse -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-nonnull -Wno-class-memaccess -Wno-redundant-move -Wno-pessimizing-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -Wno-misleading-indentation -Wctad-maybe-unsupported -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG -std=c++17  -fno-exceptions -funwind-tables -fno-rtti -MD -MT lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o -MF lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o.d -o lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o -c /var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp: In member function ‘llvm::StringRef::size_type llvm::StringRef::find_last_of(llvm::StringRef, size_t) const’:
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:288:56: error: expression cannot be used as a function
  288 |       __m128i Buffer = _mm_loadu_si128((__m128i *)(Data() + sz));
      |                                                    ~~~~^~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:288:61: error: ‘sz’ was not declared in this scope; did you mean ‘Sz’?
  288 |       __m128i Buffer = _mm_loadu_si128((__m128i *)(Data() + sz));
      |                                                             ^~
      |                                                             Sz
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:294:14: error: ‘sz’ was not declared in this scope; did you mean ‘Sz’?
  294 |     } while (sz);
      |              ^~
      |              Sz
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:295:12: error: ‘npso’ was not declared in this scope; did you mean ‘npos’?
  295 |     return npso;
      |            ^~~~
      |            npos
In file included from /var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/Support/MathExtras.h:16,
                 from /var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/APInt.h:19,
                 from /var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/APFloat.h:18,
                 from /var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:10:
/var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/bit.h: In instantiation of ‘int llvm::countl_zero(T) [with T = int]’:
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:292:64:   required from here
/var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/bit.h:281:22: error: static assertion failed: Only unsigned integral types are allowed.
  281 |   static_assert(std::is_unsigned_v<T>,
      |                 ~~~~~^~~~~~~~~~~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/bit.h:281:22: note: ‘std::is_unsigned_v<int>’ evaluates to false
ninja: build stopped: subcommand failed.


STDERR:
Command exited with non-zero status 1
1.52user 0.69system 0:00.46elapsed 477%CPU (0avgtext+0avgdata 134492maxresident)k
0inputs+61880outputs (101major+331166minor)pagefaults 0swaps
